--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#work">Work</a></li>
                         <li><a href="#skills">Skills</a></li>
-                        <li><a href="#testimonal">Testimonal</a></li>
+                        <!-- <li><a href="#testimonal">Testimonal</a></li> -->
                         <li><a href="#blog">Blog</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -120,13 +120,13 @@
                 </p>
             </div>
         </div>
-        <div class="main_container">
+        <!-- <div class="main_container">
             <div id="testimonal">
                 <h5 id="sub_heading5">Testimonal</h5>
                 <h4 id="sub_heading2">Happy Words from Happy</h4>
                 <h4 id="sub_heading2">Client!</h4>
             </div>
-        </div>
+        </div> -->
         <div class="main_container">
             <div id="blog">
                 <div class="more">
