--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                     <a href="" id="hirelink">Hire Me</a>
                     <a href="" id="hirelink">Download CV</a>
                 </div>
-                <div class="profile"></div>
+                <div class="profile">
+                    <img id="profileImg" src="/src/images/profilepic.jpeg">
+                </div>
             </div>
         </div>
         <div class="main_container">
